--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ﻿# OIDC Configuration
-VITE_OIDC_AUTHORITY=http://localhost:8080/realms/knowvault/
-VITE_OIDC_CLIENT_ID=knowvault
+VITE_OIDC_AUTHORITY=http://localhost:8080/realms/KnowVault/
+VITE_OIDC_CLIENT_ID=KnowVault
 VITE_OIDC_REDIRECT_URI=http://localhost:5173
 VITE_OIDC_CLIENT_SECRET=3S0D5f3LGeDhFPrecYXV4wcC15kJKxh9
 
