--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-oidc-context": "^3.3.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
+    "recharts": "^3.1.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
