--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "marked": "^16.1.1",
     "next-themes": "^0.3.0",
@@ -54,13 +57,14 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-is": "^19.1.1",
     "react-mde": "^11.5.0",
     "react-oidc-context": "^3.3.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
-    "showdown": "^2.1.0",
     "recharts": "^3.1.0",
-     "sonner": "^1.5.0",
+    "showdown": "^2.1.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "turndown": "^7.2.0"
